Fix and clean up

--- a/examples/TB68Conversions/Preferences1/src/locale/en-US/prefwindow.dtd
+++ b/examples/TB68Conversions/Preferences1/src/locale/en-US/prefwindow.dtd
@@ -1,4 +1,3 @@
-<!ENTITY prefwindow.title "Thunderbird 68 Preferences System Example 1">
-<!ENTITY pane1.title "Options preferences">
+<!ENTITY prefwindow.title "Thunderbird v68 Preferences Example 1">
 <!ENTITY color.label "Color:">
-<!ENTITY color.accesskey "C">
+<!ENTITY color.accesskey "T">
